--- a/package.json
+++ b/package.json
@@ -68,6 +68,8 @@
       "fetch": "github:github/fetch@^0.10.1",
       "font-awesome": "npm:font-awesome@^4.5.0",
       "phoenix.js": "github:djthread/phoenix.js@^1.1.4",
+      "prism": "github:PrismJS/prism@^1.4.1",
+      "showdown": "github:showdownjs/showdown@^1.3.0",
       "text": "github:systemjs/plugin-text@^0.0.3"
     },
     "devDependencies": {
