--- a/config/application.json
+++ b/config/application.json
@@ -2,12 +2,12 @@
   "name": "Tuesday",
   "production": {
     "socket": {
-      "endpoint": "//api.techtues.net/socket"
+      "endpoint": "//api.impulsedetroit.net/socket"
     }
   },
   "development": {
     "socket": {
-      "endpoint": "//localhost:4000/socket"
+      "endpoint": "//apitest.impulsedetroit.net/socket"
     }
   }
 }
