--- a/config/application.json
+++ b/config/application.json
@@ -7,7 +7,7 @@
   },
   "development": {
     "socket": {
-      "endpoint": "//apitest.impulsedetroit.net/socket"
+      "endpoint": "//localhost:4000/socket"
     }
   }
 }
