--- a/config/application.json
+++ b/config/application.json
@@ -5,6 +5,11 @@
       "endpoint": "//api.impulsedetroit.net/socket"
     }
   },
+  "test": {
+    "socket": {
+      "endpoint": "//apitest.impulsedetroit.net/socket"
+    }
+  },
   "development": {
     "socket": {
       "endpoint": "//localhost:4000/socket"
